# picard

./: .gitignore  NEWS.md  PLUGINS.md  appimagecraft.yml  benchmark.sh  picard.hvif  picard.spec  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements-macos-10.12.txt  requirements-macos-10.14.txt  requirements-macos-11.txt  requirements-win.txt  requirements.txt  setup.py
.github/workflows/: github-release.yml  package-macos.yml  package-pypi.yml  package-windows.yml  package.yml  run-tests.yml  test-dependencies.yml  test-linux.yml  test-macos.yml  test-pip.yml  test-windows.yml
installer/: picard-setup.nsi.in
picard/: album.py  cluster.py  collection.py  config.py  dbus_application.py  debug_opts.py  file.py  i18n.py  mbjson.py  oauth.py  options.py  tagger.py  track.py
picard/acoustid/: recordings.py
picard/browser/: addrelease.py  browser.py
picard/const/: __init__.py  cover_processing.py  defaults.py
picard/coverart/: __init__.py  image.py
picard/coverart/setters/: __init__.py  handlers.py
picard/disc/: __init__.py  whipperlog.py
picard/extension_points/: __init__.py  cover_art_processors.py  script_functions.py
picard/formats/: apev2.py  asf.py  id3.py  mp4.py  vorbis.py
picard/formats/mutagenext/: __init__.py  apev2.py
picard/git/backends/: pygit2.py
picard/plugin3/: api.py  api_impl.py  i18n.py  installable.py  installer.py  manager.py  manifest.py  plugin.py  registry.py  validator.py
picard/plugin3/asyncops/: registry.py
picard/plugin3/manager/: __init__.py
picard/script/: functions.py  parser.py
picard/session/: location_detector.py
picard/tags/: tagvar.py
picard/ui/: __init__.py  collectionmenu.py  coverartbox.py  enums.py  filebrowser.py  infostatus.py  itemviews.py  metadatabox.py  plugin_installation_dialog.py  ratingwidget.py  scriptsmenu.py  tablebaseddialog.py  theme.py  ui_edittagdialog.py  ui_options_interface.py  ui_options_releases.py  ui_widget_taglisteditor.py
picard/ui/coverartbox/: __init__.py
picard/ui/dialogs/: installplugin.py  plugin_order_selector.py
picard/ui/infodialog/: widgets.py
picard/ui/itemviews/: basetreeview.py  match_quality_column.py
picard/ui/itemviews/custom_columns/: column_controller.py  manager_dialog.py  storage.py
picard/ui/mainwindow/: __init__.py  actions.py
picard/ui/options/: __init__.py  dialog.py  interface.py  interface_colors.py  interface_top_tags.py  releases.py  sessions.py
picard/ui/player/: __init__.py  mpris.py  toolbar.py  util.py  windows.py
picard/ui/plugins_manager/: __init__.py  config.py  git_install_tab.py  install_coordinator.py  list_components.py  local_install_tab.py  manifest_info.py  plugin_installation_dialog.py  plugin_list_manager.py  preview.py  protocols.py  repository_url_inputs.py  services.py  strategies.py  validation.py  widgets.py
picard/util/: __init__.py  cdrom.py  datauri.py  filenaming.py  imageinfo.py  imagelist.py  natsort.py  pipe.py  thread.py
picard/webservice/: __init__.py  api_helpers.py  ratecontrol.py
resources/img-src/: picard-icon-haiku.iom
scripts/package/: AppRun  changelog-for-version.py  entitlements.plist  macos-package-app.sh  macos-setup.sh  package-appimage.sh  run-sdist-test.sh  win-package-appx.ps1  win-package-installer.ps1  win-package-portable.ps1  win-setup.ps1
scripts/pyinstaller/: faulthandler-hook.py  macos-library-path-hook.py
test/: conftest.py  picardtestcase.py  test_coverartbox_info.py  test_i18n.py  test_plugin3_multi_repo.py  test_plugin_installation_dialog.py  test_util_datauri.py  test_util_filenaming.py  test_util_natsort.py  test_utils.py  test_vorbis_sanitize_dates.py
test/plugin3/: __init__.py  test_config.py  test_list_components.py  test_local_source.py  test_localization.py  test_services.py  test_strategies.py  test_validation.py  test_version_compatibility.py  test_widgets.py
ui/: options_interface.ui
