[build-system]
requires = ["setuptools>=62.4.0"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "picard"
version = "3.0.0dev2"
description = "The next generation MusicBrainz tagger"
authors = ["MusicBrainz Picard Developers"]
license = "GPL-2.0-or-later"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.13"  # required for PyInstaller compatibility
discid = {version = "^1.0"}
Markdown = "^3.2"
mutagen = "^1.37"
PyJWT = "^2.0"
pyobjc-core = {version = ">=6.2,<11", markers = "sys_platform == 'darwin'"}
pyobjc-framework-Cocoa = {version = ">=6.2,<11", markers = "sys_platform == 'darwin'"}
PyQt6 = [
    {version = "^6.5"},
    {version = "~6.5", markers = "sys_platform == 'darwin'"}
]
PyQt6-Qt6 = [
    {version = "^6.5"},
    {version = "~6.5", markers = "sys_platform == 'darwin'"}
]
python-dateutil = "^2.7"
pywin32 = {version = ">=306", markers= "sys_platform == 'win32'"}
PyYAML = "^6.0"

[tool.poetry.group.build]
optional = true

[tool.poetry.group.build.dependencies]
babel = "^2.6.0"
PyInstaller = "^6.3.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.4"
flake8 = "^7.0"
isort = "^5.0"
pycodestyle = "^2.11.1"
pylint = "^3.0.3"
wlc = "^1.13"
pytest = "^7.4.4"

[tool.isort]
sections = [
    "FUTURE", "STDLIB", "FIRSTPARTY", "THIRDPARTY", "QT", "TEST", "PICARD", "LOCALFOLDER",
    "RESOURCES", "PICARD_UI"
]
default_section = "LOCALFOLDER"
known_first_party = []
known_picard = ["picard"]
known_picard_ui = ["picard.ui"]
known_qt = ["PyQt6"]
known_resources = ["picard.resources"]
known_test = ["test.*"]
known_third_party = ["dateutil", "fasteners", "mutagen", "yaml"]
skip_glob = ["**/ui_*.py", "picard/resources.py"]
combine_as_imports = true
float_to_top = false
force_grid_wrap = 2
force_sort_within_sections = true
include_trailing_comma = true
indent = "    "
lines_after_imports = 2
multi_line_output = 3
order_by_type = true
use_parentheses = true
