[build-system]
requires = ["setuptools>=66.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "picard"
description = "Picard is a cross-platform music tagger powered by the MusicBrainz database"
authors = [{name = "The MusicBrainz Team"}]
license = {text = "GPL-2.0-or-later"}
keywords = ["musicbrainz", "tagging", "audio"]
requires-python = ">=3.9"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Development Status :: 5 - Production/Stable",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications :: Qt",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Intended Audience :: End Users/Desktop",
]
dynamic = ["version", "readme"]
dependencies = [
    "charset-normalizer~=3.3",
    "discid~=1.0",
    "markdown~=3.2",
    "mutagen~=1.37",
    "pyjwt~=2.0",
    "pyobjc-core>=6.2,<11 ; sys_platform == 'darwin'",
    "pyobjc-framework-cocoa>=6.2,<11 ; sys_platform == 'darwin'",
    "pyqt6>=6.6.1",
    "pyqt6-qt6>=6.6.1",
    "python-dateutil~=2.7",
    "pywin32>=308 ; sys_platform == 'win32'",
    "pyyaml>=5.1,<7",
]

[project.urls]
Homepage = "https://picard.musicbrainz.org/"
Documentation = "https://picard-docs.musicbrainz.org/"
Repository = "https://github.com/metabrainz/picard.git"
Issues = "https://tickets.metabrainz.org/projects/PICARD/issues/"
Changelog = "https://picard.musicbrainz.org/changelog/"

[dependency-groups]
build = [
    "babel>=2.10.0",
    "pyinstaller==6.12.0",
    "pytest>=8.1",
    "setuptools>=66.1.0",
]
dev = [
    "autopep8>=2.3.2",
    "babel>=2.6.0",
    "flake8>=7.1.2",
    "isort>=5.0",
    "pycodestyle>=2.12.1",
    "pylint>=2.6.0",
    "wlc>=1.15",
]
test = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-randomly>=3.16.0",
]

[tool.setuptools]
ext-modules = [
    {name = "picard.util._astrcmp", sources = ["picard/util/_astrcmp.c"]},
]

[tool.setuptools.dynamic]
version = {attr = "picard.PICARD_VERSION_STR_SHORT"}
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.setuptools.packages.find]
include = ["picard*"]

[tool.isort]
sections = [
    "FUTURE", "STDLIB", "FIRSTPARTY", "THIRDPARTY", "QT", "TEST", "PICARD", "LOCALFOLDER",
    "RESOURCES", "PICARD_UI"
]
default_section = "LOCALFOLDER"
known_first_party = []
known_picard = ["picard"]
known_picard_ui = ["picard.ui"]
known_qt = ["PyQt6"]
known_resources = ["picard.resources"]
known_test = ["test.*"]
known_third_party = ["dateutil", "fasteners", "mutagen", "yaml"]
skip_glob = ["picard/ui/forms/ui_*.py", "picard/resources.py"]
combine_as_imports = true
float_to_top = false
force_grid_wrap = 2
force_sort_within_sections = true
include_trailing_comma = true
indent = "    "
lines_after_imports = 2
multi_line_output = 3
order_by_type = true
use_parentheses = true

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "picard/ui/forms/ui_*.py",
    "picard/resources.py",
]

line-length = 120
indent-width = 4

target-version = "py39"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "E", "F", "W", "B"]
ignore = ["B023", "E501", "Q"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
#dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "preserve"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = false
docstring-code-line-length = "dynamic"
